--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                         <div class="shadow cover-full transition"></div>
                         <div class="desc center">
                             <h4>Terrenos</h4>
-                            <a href="terreno.html" class="btn-secondary">Ver más</a>
+                            <a href="/ango/terreno.html" class="btn-secondary">Ver más</a>
                         </div>
                 </div>
                 <div class="col-md-4 box-image">
@@ -166,7 +166,7 @@
                         <div class="shadow cover-full transition"></div>
                         <div class="desc center">
                             <h4>Casas</h4>
-                            <a href="casa.html" class="btn-secondary">Ver más</a>
+                            <a href="ango/casa.html" class="btn-secondary">Ver más</a>
                         </div>
                 </div>
                 <div class="col-md-4 box-image">
@@ -175,7 +175,7 @@
                         <div class="shadow cover-full transition"></div>
                         <div class="desc center">
                             <h4>Departamentos</h4>
-                            <a href="departamento.html" class="btn-secondary">Ver más</a>
+                            <a href="/ango/departamento.html" class="btn-secondary">Ver más</a>
                         </div>
                 </div>
             </div>
