--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
                     <div class="overlay-bg cover-full"></div>
                     <div class="container">
                         <div class="caption">
-                            <h1 class="caption-heading">El lugar perfecto para tu familia</h1>
-                            <a href="#" class="btn btn-secondary">Ver más</a>
+                            <h1 class="caption-heading">ANGO <br>
+                            Ingeniería y Consultoría</h1>
+                            <a href="#about" class="btn btn-secondary">Conoce más</a>
                         </div>
                     </div>
                 </div>
@@ -81,8 +82,9 @@
                     <div class="overlay-bg cover-full"></div>
                     <div class="container">
                         <div class="caption">
-                            <h1 class="caption-heading">El mejor precio para tu familia</h1>
-                            <a href="#" class="btn btn-secondary">Ver más</a>
+                            <h1 class="caption-heading">ANGO <br>
+                                Ingeniería y Consultoría</h1>
+                            <a href="#about" class="btn btn-secondary">Conoce más</a>
                         </div>
                     </div>
                 </div>
@@ -90,8 +92,9 @@
                     <div class="overlay-bg cover-full"></div>
                     <div class="container">
                         <div class="caption">
-                            <h1 class="caption-heading">El regalo más grande: Tu hogar</h1>
-                            <a href="#" class="btn btn-secondary">Ver más</a>
+                            <h1 class="caption-heading">ANGO <br>
+                                Ingeniería y Consultoría</h1>
+                            <a href="#about" class="btn btn-secondary">Conoce más</a>
                         </div>
                     </div>
                 </div>
