--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		</script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
         <title>Laravel</title>
 
         <link rel="stylesheet" href="css/style.css">
