--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-        <title>Laravel</title>
+        <title>ANGO Ingeniería y Consultoría</title>
 
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/colors.css">
@@ -237,7 +237,7 @@
                                 y estaremos encantados de conocerte.
                             </p>
                         </div>
-                        <div class="contact-form">
+                      <!--  <div class="contact-form">
                             <form action="">
                                 <div class="mb-3">
                                     <input type="text" class="form-control"name="" id="" placeholder="Nombre completo">
@@ -254,8 +254,8 @@
                                 <div class="mb-3">
                                     <button class="btn btn-primary">Enviar</button>
                                 </div>
-                            </form>
-                        </div>
+                            </form> 
+                        </div>-->
                     </div>
                 </div>
             </div>
