--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                         <div class="shadow cover-full transition"></div>
                         <div class="desc center">
                             <h4>Terrenos</h4>
-                            <a href="/ango/terreno.html" class="btn-secondary">Ver más</a>
+                            <a href="terreno.html" class="btn-secondary">Ver más</a>
                         </div>
                 </div>
                 <div class="col-md-4 box-image">
@@ -179,7 +179,7 @@
                         <div class="shadow cover-full transition"></div>
                         <div class="desc center">
                             <h4>Departamentos</h4>
-                            <a href="/ango/departamento.html" class="btn-secondary">Ver más</a>
+                            <a href="ango/departamento.html" class="btn-secondary">Ver más</a>
                         </div>
                 </div>
             </div>
