--- a/casa.html
+++ b/casa.html
@@ -71,7 +71,7 @@
                                 y estaremos encantados de conocerte.
                             </p>
                         </div>
-                        <div class="contact-form">
+                        <!-- <div class="contact-form">
                             <form action="">
                                 <div class="mb-3">
                                     <input type="text" class="form-control"name="" id="" placeholder="Nombre completo">
@@ -89,7 +89,7 @@
                                     <button class="btn btn-primary">Enviar</button>
                                 </div>
                             </form>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
