--- a/terreno.html
+++ b/terreno.html
@@ -31,7 +31,7 @@
         <!--NavBar-->
         <nav id="navbar" class="navbar navbar-expand-sm">
             <div class="container" style="background-color: #2d3748 " >
-                <a class="navbar-brand" href="/">
+                <a class="navbar-brand" href="https://voxow.github.io/ango">
                     <img src="imagen/logo1.png" alt="logo detail">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-main">
@@ -40,17 +40,17 @@
                 <div class="collapse navbar-collapse" id="navbar-main">
                     <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" href="/#about">Acerca de</a>
+                            <a class="nav-link active" href="https://voxow.github.io/ango/#about">Acerca de</a>
                         </li>
                     
                         <li class="nav-item">
-                            <a class="nav-link" href="/#projects">Proyectos</a>
+                            <a class="nav-link" href="https://voxow.github.io/ango/#projects">Proyectos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/#testimonials">Historias</a>
+                            <a class="nav-link" href="https://voxow.github.io/ango/#testimonials">Historias</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/#contact">Contacto</a>
+                            <a class="nav-link" href="https://voxow.github.io/ango/#contact">Contacto</a>
                         </li>
                     </ul>
                 </div>
