--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                      
         <nav id="navbar" class="navbar navbar-expand-sm">
             <div class="container">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="https://voxow.github.io/ango/">
                     <img src="imagen/logo1.png" alt="logo detail">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-main">
